@@ -1,5 +1,9 @@
 2009-11-09 S. Thiell <stephane.thiell@cea.fr>
 
+	* Engine/EPoll.py: Add stdout/stderr support (still experimental).
+
+	* Worker/Pdsh.py: Fix stdout/stderr support.
+
     * Backport recent 1.1-branch improvements: tests code coverage, also
 	resulting in some fixes (see 1.1 2009-10-28).
 
